--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /InitObjClass/nbproject/private/
 /InitObjClass/build/
+/Calculator/nbproject/private/
+/Calculator/build/
+/SwingExample1/nbproject/private/
+/SwingExample1/build/
