Using inheritance for represent swing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Calculator/build/
 /SwingExample1/nbproject/private/
 /SwingExample1/build/
+/SwingUsingInheritance/nbproject/private/
+/SwingUsingInheritance/build/
