--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /SwingExample1/build/
 /SwingUsingInheritance/nbproject/private/
 /SwingUsingInheritance/build/
+/ButtonCreation/nbproject/private/
+/ButtonCreation/build/
+/ActionListener/nbproject/private/
+/Events/nbproject/private/
+/Events/build/
