Event Listener Examples

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /ActionListener/nbproject/private/
 /Events/nbproject/private/
 /Events/build/
+/EventExample1/nbproject/private/
+/EventExample1/build/
+/MultiCalculator/nbproject/private/
+/MultiCalculator/build/
