this and super keyword example

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /MultiCalculator/build/
 /SelfTry/nbproject/private/
 /SelfTry/build/
+/ThisSuperKeyword/nbproject/private/
+/ThisSuperKeyword/build/
