--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /SelfTry/build/
 /ThisSuperKeyword/nbproject/private/
 /ThisSuperKeyword/build/
+/FinalKeyword/nbproject/private/
+/FinalKeyword/build/
+/Practice1/nbproject/private/
+/Practice1/build/
