Abstract Class Example

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /Forms/build/
 /AddSub/nbproject/private/
 /AddSub/build/
+/Interface/nbproject/private/
+/Abstract/nbproject/private/
+/Abstract/build/
