--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /Abstract/nbproject/private/
 /Abstract/build/
 /Interface/build/
+/MethodOverriding/nbproject/private/
+/MethodOverriding/build/
+/JavaApplication9/nbproject/private/
+/JavaApplication9/build/
