--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /MethodOverriding/build/
 /JavaApplication9/nbproject/private/
 /JavaApplication9/build/
+/ThreadSyn/nbproject/private/
+/ThreadSyn/build/
