Types of Layout Manager

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@
 /OddEven/build/
 /FileHandling/nbproject/private/
 /FileHandling/build/
+/FlowLayout/nbproject/private/
+/BorderLayout/nbproject/private/
+/BorderLayout/build/
+/FlowLayout/build/
+/GridLayout/nbproject/private/
+/GridLayout/build/
+/CardLay/nbproject/private/
+/CardLay/build/
+/GridLayout11/nbproject/private/
+/GridLayout11/build/
