--- a/ItemListenerCheckBox11/nbproject/project.properties
+++ b/ItemListenerCheckBox11/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ItemListenerEx.jar
+dist.jar=${dist.dir}/ItemListenerCheckBox11.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ItemListenerEx
+dist.jlink.output=${dist.jlink.dir}/ItemListenerCheckBox11
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=22
-javac.target=22
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ItemListenerEx
-main.class=ItemListenerEx
+jlink.launcher.name=ItemListenerCheckBox11
+main.class=itemlistenercheckbox11.ItemListenerCheckBox11
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
