ItemListener CheckBox Example

--- a/ItemListenerCheckBox11/nbproject/project.properties
+++ b/ItemListenerCheckBox11/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ItemListenerCheckBox11
-main.class=itemlistenercheckbox11.ItemListenerCheckBox11
+main.class=ItemListenerCheckBox11
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
