--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@
 /ItemListener/nbproject/private/
 /ItemListenerEx/nbproject/private/
 /ItemListenerEx/build/
+/KeyListenerEx/nbproject/private/
+/KeyListenerEx/build/
+/FoucsListenerEx/nbproject/private/
