--- a/FoucsListenerEx/nbproject/project.properties
+++ b/FoucsListenerEx/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ItemListenerRadioButton11.jar
+dist.jar=${dist.dir}/FoucsListenerEx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ItemListenerRadioButton11
+dist.jlink.output=${dist.jlink.dir}/FoucsListenerEx
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ItemListenerRadioButton11
-main.class=ItemListenerRadioButton11
+jlink.launcher.name=FoucsListenerEx
+main.class=foucslistenerex.FoucsListenerEx
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
