Network Connectivity and Socket

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,20 @@
 /KeyListenerEx/nbproject/private/
 /KeyListenerEx/build/
 /FoucsListenerEx/nbproject/private/
+/FoucsListenerEx/build/
+/JOptionPaneEx/nbproject/private/
+/JOptionPaneEx/build/
+/JOptionMessageDialogEx/nbproject/private/
+/JOptionMessageDialogEx/build/
+/JDBC/nbproject/private/
+/JDBC/build/
+/JDBCExample/nbproject/private/
+/JDBCExample/build/
+/PrTable/nbproject/private/
+/PrTable/build/
+/NetworkExample/nbproject/private/
+/NetworkExample/build/
+/INetAddressEx1/nbproject/private/
+/INetAddressEx1/build/
+/MyServer/nbproject/private/
+/MyServer/build/
